[package]
name = "avr-embassy-example"
version = "0.1.0"
authors = ["NikBel3476 <nikita.belkin3476@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "avr-embassy-example"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"
critical-section = "1.2.0"
# avr-device = { git = "https://github.com/rahix/avr-device", rev = "36b05c7", features = [
#     "rt",
#     "atmega328p",
# ] }
avr-device = { version = "0.7.0", features = ["rt", "atmega328p"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "4af2d9a", features = [
    "arch-avr",
    "executor-thread",
] }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "4af2d9a", features = [
    "tick-hz-1_000",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "4af2d9a", features = [
    "generic-queue-8",
    "tick-hz-1_000",
] }
embassy-time-queue-utils = { git = "https://github.com/embassy-rs/embassy", rev = "4af2d9a", features = [
    "generic-queue-8",
] }
portable-atomic = { version = "1.11.1", features = ["critical-section"] }

[dependencies.atmega-hal]
git = "https://github.com/rahix/avr-hal"
rev = "6807aaf"
features = ["rt", "atmega328p", "critical-section-impl"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
